--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/cqrs": "^11.0.3",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "couchbase": "^4.4.5",
     "dotenv": "^16.5.0",
     "ioredis": "^5.6.1",
